# readup

./: .env  .env.example.oauth  .env.local.example  .env.tauri  .gitignore  Cargo.toml  Dockerfile  README.md  components.json  i18next-scanner.config.js  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.json  tsconfig.json  vercel.json  vitest.config.mts  wrangler.toml
.github/ISSUE_TEMPLATE/: report-bug.md
.github/workflows/: deplot-vercel.yml  deploy-vercel.yml  pull-request.yml  release.yml  vercel-merge.yml
apps/readup-app/: .env  .env.local.example  package.json
e2e/: app.e2e.ts
extensions/windows-thumbnail/: README.md
fastlane/: Fastfile
ops/: flake.nix
public/: manifest.json
public/.well-known/: apple-app-site-association  assetlinks.json
public/oauth/: metadata.json
scripts/: release-ios-appstore.sh
src/: middleware.ts  sw.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/capabilities-extra/: webdriver.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: dir.rs  feed.rs  file.rs  lib.rs  main.rs
src/app/: MigrateDataWindow.tsx  NavBar.tsx  SettingsMenu.tsx  error.tsx  layout.tsx  page.tsx
src/components/: AboutWindow.tsx  Alert.tsx  AuthWindow.tsx  Button.tsx  Dialog.tsx  Dropdown.tsx  ErrorBoundary.tsx  KeyboardShortcutsHelp.tsx  Link.tsx  Logo.tsx  Menu.tsx  MenuItem.tsx  Portal.tsx  Providers.tsx  Select.tsx  Slider.tsx  (+4 more)
tools/: extract_i18n_keys.js  translate_and_regenerate.js  translation_keys.txt
(+480 files in other folders)
