[workspace]
members = [
  "apps/readup-app/src-tauri",
  "packages/tauri/crates/tauri",
]
resolver = "2"

[workspace.package]
authors = [""]
homepage = "https://readup.cc"
license = "AGPL-3.0"
repository = ""
categories = []
edition = "2021"
rust-version = "1.77.2"

[patch.crates-io]
tauri = { path = "packages/tauri/crates/tauri" }